# marsyas-stacking

./: .gitignore  LICENSE  Pipfile  README.md  README.rst  menu.sh  pyproject.toml
database/CAL500/holdout/annotations/: ground_truth.txt  test.txt  train.txt
database/CAL500/k_fold/annotations/1/: ground_truth.txt  test.txt  train.txt
database/CAL500/k_fold/annotations/2/: ground_truth.txt  test.txt  train.txt
database/CAL500/k_fold/annotations/3/: ground_truth.txt  test.txt  train.txt
database/CAL500/k_fold/annotations/4/: ground_truth.txt  test.txt  train.txt
database/CAL500/k_fold/annotations/5/: ground_truth.txt  test.txt  train.txt
database/FMA/holdout/annotations/: ground_truth.txt  test.txt  train.txt
database/FMA/k_fold/annotations/1/: ground_truth.txt  test.txt  train.txt
database/FMA/k_fold/annotations/2/: ground_truth.txt  test.txt  train.txt
database/FMA/k_fold/annotations/3/: test.txt  (+2 more)
database/MagnaTagATune/holdout/annotations/: ground_truth.txt  test.txt
database/MillionSong/holdout/annotations/: ground_truth.txt  test.txt
environment/: environment.yml  update_environment.sh
scripts/: clean_project.sh  evaluation_holdout.sh  evaluation_k_fold.sh  extract_features_holdout.sh  extract_features_k_fold.sh  first_stage_holdout.sh  first_stage_k_fold.sh  second_stage_holdout.sh  second_stage_k_fold.sh
src/: compute_evaluation_holdout.py  compute_evaluation_k_fold.py  data_preprocessing.py  generate_annotations.py  generate_structure.py  holdout_validation.py  k_fold_cross_validation.py
utils/: config_to_python.py  config_to_shell.py
(+26 files in other folders)
