[tool.poetry]
name = "marsyas-stacking"
version = "0.1.0"
description = "baseline"
authors = ["Juliano Donini <julianodonini89@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.9"
numpy = "1.18.1"
pandas = "0.23.3"
librosa = "0.6.1"
matplotlib = "2.2.2"
audioread = "2.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
